fix: [BUG] login and add project button not visible in mobile view (#407)
* fix: [BUG] login and add project button not visible in mobile view

* fix: minor improvements

* fix: center alignment of check image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --secondary-background: rgba(217, 217, 217, 0.07);
+  --secondary-background: #142E4E;
 
   --primary-color: #17a24a;
+
+  --primary-background: #0F2239;
 }
 
 body {
